# vanttec_learning

./: CMakeLists.txt  README.md  package.xml
launch/: tarea2_launch.py  tarea3_launch.py  tarea4_launch.py  urdf_disp_tarea3.launch.py  urdf_disp_tarea4.launch.py  urdf_display.launch.py
rviz/: urdf.rviz  urdf_tarea3.rviz  urdf_tarea4.rviz
src/: joint_twist_publisher_node.cpp  robot_state_publisher_node.cpp  turtle_follower_node.cpp  turtle_tf2_publisher_node.cpp
src/pd/: pd.cpp  pd.hpp
urdf/: test_robot.urdf
